<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/databaseActivityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DatabaseActivity_header"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/instructionsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/database_list_instructions" />

    <Button
        android:id="@+id/buttonNewEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonNewEntry" />

    <Button
        android:id="@+id/buttonBackToMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonBackToMain" />

    <ListView
        android:id="@+id/listViewRecords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>